<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_personal" />
        <item
            android:id="@+id/nav_works"
            android:icon="@drawable/ic_action_works"
            android:title="@string/menu_works" />
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_action_friend"
            android:title="@string/menu_friend" />
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/ic_action_group"
            android:title="@string/menu_group" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_action_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/menu_about" />
    </group>
</menu>