<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_work_1"
        android:orderInCategory="100"
        android:title="@string/menu_item_work_filter1"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_work_2"
        android:orderInCategory="100"
        android:title="@string/menu_item_work_filter2"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_work_3"
        android:orderInCategory="100"
        android:title="@string/menu_item_work_filter3"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_work_4"
        android:orderInCategory="100"
        android:title="@string/menu_item_work_filter4"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_work_5"
        android:orderInCategory="100"
        android:title="@string/menu_item_work_filter5"
        app:showAsAction="never" />
</menu>