<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="106dp"
        android:layout_height="114dp"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/edt_user1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/edt_pass1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/edt_confirm_pass"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirm_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="144dp"
        android:layout_height="52dp"
        android:background="@color/colorTextHint"
        android:text="@string/register_btn"
        android:textColor="@android:color/white" />

</LinearLayout>